--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+#root {
+  height: 100vh;
+  background-color: gainsboro;
+}
+
 .App {
   text-align: center;
+  height: 100%;
 }
 
 .App-logo {
@@ -21,6 +27,13 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.Search {
+  text-align: left;
+  border: 1px solid black;
+  width: 30%;
+  height: 100%;
 }
 
 @keyframes App-logo-spin {
