--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,6 @@
-#root {
-  height: 100vh;
-  background-color: gainsboro;
-}
-
 .App {
-  text-align: center;
-  height: 100%;
+  height: 100vh;
+  position: relative;
 }
 
 .App-logo {
@@ -29,11 +24,45 @@
   color: #61dafb;
 }
 
-.Search {
-  text-align: left;
-  border: 1px solid black;
-  width: 30%;
+#map-container {
+  position: absolute;
+  width: 100%;
   height: 100%;
+  z-index: 10;
+}
+
+#search-container {
+  border: 1px solid black;
+  background-color: white;
+  z-index: 20;
+}
+
+/* For mobile phones: */
+#search-container {
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: 400px;
+}
+
+/* For tablets: */
+@media only screen and (min-width: 600px) {
+  #search-container {
+    position: relative;
+    float: right;
+    width: 300px;
+    height: 100%;
+  }
+}
+
+/* For tablets/desktop: */
+@media only screen and (min-width: 768px) {
+  #search-container {
+    position: relative;
+    float: right;
+    width: 400px;
+    height: 100%;
+  }
 }
 
 @keyframes App-logo-spin {
