--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 }
 
 #search-container {
-  border: 1px solid black;
+  border: 1px solid darkgray;
   background-color: white;
   z-index: 20;
 }
