--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,42 @@
   color: #61dafb;
 }
 
+.list-group {
+  position: relative;
+  max-height: inherit;
+  margin-bottom: 10px;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+.list-group-item:hover {
+  background-color: lightskyblue;
+}
+
 #map-container {
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: 10;
+}
+
+.name-label {
+  font-weight: bold;
+}
+.name-label:after {
+  content: "\A";
+  white-space: pre;
+}
+
+.panel-title {
+  padding-left: 20px;
+  padding-bottom: 10px;
+  background-color: lightsteelblue;
+  margin: 0;
+}
+
+#result_panel {
+  max-height: 90vh;
 }
 
 #search-container {
